--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                     <ul class="navigation-menu">
                         <li><a href="#home" class="menu-link">Home</a></li>
-                        <li><a href="#about" class="menu-link">About</a></li>
+                        <li><a href="about.html" class="menu-link">About</a></li>
                         <li><a href="#contact" class="menu-link">Contact</a></li>
                         <li><a href="#signup" class="menu-link">Sign Up</a></li>
                     </ul>
