--- a/home.html
+++ b/home.html
@@ -55,10 +55,10 @@
                 <nav class="main-navigation">
 
                     <ul class="navigation-menu">
-                        <li><a href="#home" class="menu-link">Home</a></li>
-                        <li><a href="#about" class="menu-link">About</a></li>
-                        <li><a href="#contact" class="menu-link">Contact</a></li>
-                        <li><a href="#signup" class="menu-link">Sign Up</a></li>
+                        <li><a href="home.html" class="menu-link">Home</a></li>
+                        <li><a href="about.html" class="menu-link">About</a></li>
+                        <li><a href="contact.html" class="menu-link">Contact</a></li>
+                        <li><a href="register.html" class="menu-link">Sign Up</a></li>
                     </ul>
                 </nav>
                 <div class="header-actions">
@@ -99,10 +99,10 @@
                                 alt="Search Icon" class="search-icon"></button>
                     </form>
                 </li>
-                <li><a href="#home" class="menu-link">Home</a></li>
-                <li><a href="#about" class="menu-link">About</a></li>
-                <li><a href="#contact" class="menu-link">Contact</a></li>
-                <li><a href="#signup" class="menu-link">Sign Up</a></li>
+                <li><a href="home.html" class="menu-link">Home</a></li>
+                <li><a href="about.html" class="menu-link">About</a></li>
+                <li><a href="contact.html" class="menu-link">Contact</a></li>
+                <li><a href="register.html" class="menu-link">Sign Up</a></li>
             </ul>
         </div>
     </div>
