--- a/contact.html
+++ b/contact.html
@@ -24,8 +24,8 @@
 
 
 
-    <header>
-        <section class="promo-header" data-aos="zoom-in">
+    <header data-aos="fade-down" data-aos-duration="1000">
+        <section class="promo-header" >
             <div class="container">
                 <div class="promo-content">
 
@@ -51,7 +51,7 @@
 
         </section>
 
-        <section class="main-header" data-aos="zoom-in" data-aos-duration="1000">
+        <section class="main-header" >
             <div class="container">
 
                 <div class="header-content">
@@ -77,9 +77,9 @@
 
 
 
-                            <a href="#wishlist" class="wishlist-link"><img src="./assests/favorite-icon.svg"
+                            <a href="wishList.html" class="wishlist-link"><img src="./assests/favorite-icon.svg"
                                     alt="Wishlist Icon"></a>
-                            <a href="#cart" class="cart-link"><img src="./assests/cart-icon.svg" alt="Cart Icon"></a>
+                            <a href="cart.html" class="cart-link"><img src="./assests/cart-icon.svg" alt="Cart Icon"></a>
 
                             <a href="#" class="menu-btn"><i class="fa-solid fa-bars"></i></a>
                         </div>
@@ -117,14 +117,14 @@
 
     <section class="contact">
         <div class="container">
-            <ul class="breadcrumb" data-aos="fade-down" >
+            <ul class="breadcrumb" data-aos="fade-down" data-aos-duration="1000" >
                
             </ul>
 
 
 
             <div class="contact-component"  >
-                <div class="contact-details"  data-aos="zoom-in">
+                <div class="contact-details"  data-aos="zoom-in" data-aos-duration="1000">
 
                     <div class="call-to-us" >
                        <div class="heading">
@@ -148,7 +148,7 @@
                     </div>
                 </div>
 
-                <div class="contact-form" data-aos="zoom-in">
+                <div class="contact-form" data-aos="zoom-in" data-aos-duration="1000">
 
                     <form action="">
                         <div class="user-details">
@@ -182,10 +182,10 @@
 
 
 
-    <footer>
+    <footer >
         <div class="container">
             <div class="footer-content">
-                <div class="exclusive-section" data-aos="zoom-in" data-aos-duration="1500">
+                <div class="exclusive-section" >
                     <h1 class="footer-logo">Exclusive </h1>
                     <h5>Subscribe</h5>
                     <p>Get 10% off your first order</p>
@@ -195,7 +195,7 @@
                     </div>
                 </div>
 
-                <div class="support-section" data-aos="zoom-in" data-aos-duration="1500">
+                <div class="support-section" >
                     <h5>Support</h5>
 
                     <p>111 Bijoy sarani, Dhaka, DH 1515, Bangladesh.</p>
@@ -203,7 +203,7 @@
                     <a href="tel:+88015-88888-9999">+88015-88888-9999</a>
                 </div>
 
-                <div class="account-section" data-aos="zoom-in" data-aos-duration="1500">
+                <div class="account-section" >
                     <h5>Account</h5>
 
                     <ul>
@@ -217,7 +217,7 @@
                     </ul>
                 </div>
 
-                <div class="quick-link-section" data-aos="zoom-in" data-aos-duration="1500">
+                <div class="quick-link-section" >
                     <h5>Quick Link</h5>
 
                     <ul>
@@ -229,7 +229,7 @@
                     </ul>
                 </div>
 
-                <div class="download-app-section" data-aos="zoom-in" data-aos-duration="1500">
+                <div class="download-app-section" >
                     <h5>Download App</h5>
 
                     <p>Save $3 with App New User Only</p>
