--- a/register.html
+++ b/register.html
@@ -23,8 +23,8 @@
 
 <body>
 
-    <header>
-        <section class="promo-header" data-aos="zoom-in">
+    <header data-aos="fade-down" data-aos-duration="1000">
+        <section class="promo-header" >
             <div class="container">
                 <div class="promo-content">
 
@@ -50,7 +50,7 @@
 
         </section>
 
-        <section class="main-header" data-aos="zoom-in" data-aos-duration="1000">
+        <section class="main-header" >
             <div class="container">
 
                 <div class="header-content">
@@ -168,10 +168,10 @@
 
 
 
-    <footer>
+    <footer >
         <div class="container">
             <div class="footer-content">
-                <div class="exclusive-section" data-aos="zoom-in" data-aos-duration="1000">
+                <div class="exclusive-section" >
                     <h1 class="footer-logo">Exclusive </h1>
                     <h5>Subscribe</h5>
                     <p>Get 10% off your first order</p>
@@ -181,7 +181,7 @@
                     </div>
                 </div>
 
-                <div class="support-section" data-aos="zoom-in" data-aos-duration="1000">
+                <div class="support-section" >
                     <h5>Support</h5>
 
                     <p>111 Bijoy sarani, Dhaka, DH 1515, Bangladesh.</p>
@@ -189,7 +189,7 @@
                     <a href="tel:+88015-88888-9999">+88015-88888-9999</a>
                 </div>
 
-                <div class="account-section" data-aos="zoom-in" data-aos-duration="1000">
+                <div class="account-section" >
                     <h5>Account</h5>
 
                     <ul>
@@ -203,7 +203,7 @@
                     </ul>
                 </div>
 
-                <div class="quick-link-section" data-aos="zoom-in" data-aos-duration="1000">
+                <div class="quick-link-section" >
                     <h5>Quick Link</h5>
 
                     <ul>
@@ -215,7 +215,7 @@
                     </ul>
                 </div>
 
-                <div class="download-app-section" data-aos="zoom-in" data-aos-duration="1000">
+                <div class="download-app-section" >
                     <h5>Download App</h5>
 
                     <p>Save $3 with App New User Only</p>
@@ -237,7 +237,7 @@
                 </div>
             </div>
 
-            <div class="copyright">
+            <div class="copyright" >
                 <img src="./assests/icon-copyright.png" alt="">
                 <p>Copyright Rimel 2022. All right reserved</p>
             </div>
