--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
         <div class="overlay">
             <div class="overlay-content">
 
-                <a href="#" class="closebtn">&times;</a>
+                <a href="#" class="closebtn"><i class="fa-solid fa-xmark"></i></a>
                 <ul class="navigation-menu">
                     <li>
                         <form action="#" class="search-bar">
@@ -112,6 +112,7 @@
         </div>
 
     </header>
+
 
 
     <section class="about">
