--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,6 +21,8 @@
 </head>
 
 <body>
+
+
     <header data-aos="fade-down" data-aos-duration="1000">
         <section class="promo-header" >
             <div class="container">
@@ -111,7 +113,6 @@
     </header>
 
    
-    
     
     <nav class="side-nav-carousel " >
         <div class="container">
@@ -394,7 +395,7 @@
             </div>
 
             <div class="inner-heading">
-                <h3 data-aos="fade-right">Browse By Category</h3>
+                <h3 data-aos="fade-right">Best Selling Products</h3>
 
                 <div class="view-all-btn" data-aos="zoom-in">
                     <button class="btn">View All</button>
