--- a/wishList.html
+++ b/wishList.html
@@ -130,40 +130,35 @@
 
 
             <div class="wishList-items">
-                <div class="productItem">
 
-                    <div class="item-card">
 
-                        <div class="item-img">
-                            <img src="./assests/item1.png" class="product-img" alt="">
-
-                            <img src="./assests/fill-delete.png" class="fill-heart" alt="">
-
-                            <button class=" add-to-cart">Add to Cart <button>
-                                    
-                        </div>
-
-                        <div class="item-details">
-                            <h4 class="product.name">${product.productName}</h4>
-
-                            <div class="price">
-                                <h4>$ ${product.price} <span class="discounted-price">$${product.originalPrice}</span>
-                                </h4>
-                            </div>
-
-                            
-                        </div>
-
-                    </div>
-                </div>
 
             </div>
-        </div>
         </div>
 
     </section>
 
+    <section class="just-for-you">
 
+        <div class="container">
+            <div class="heading">
+                <div class="main-heading">
+                    <img src="./assests/headings-icon.svg" alt="">
+                    <h2>Just For You</h2>
+                </div>
+
+                <div>
+                    <button class="btn wishList-btns">See All</button>
+                </div>
+            </div>
+
+
+            <div class="products-for-you">
+
+            </div>
+        </div>
+
+    </section>
 
     <footer>
         <div class="container">
