--- a/home.html
+++ b/home.html
@@ -534,20 +534,20 @@
                 <div data-aos="zoom-in" data-aos-duration="1500">
                     <img src="./assests/free-fast-delivery.png">
                     <h5>FREE AND FAST DELIVERY</h5>
-                    <p>Free delivery for all orders over $140</p>
+                    <p>Free delivery for all orders over ₹499</p>
                 </div>
 
                 <div data-aos="zoom-in" data-aos-duration="1500">
                     <img src="./assests/customer-service.png">
                     <h5>FREE AND FAST DELIVERY</h5>
-                    <p>Free delivery for all orders over $140</p>
+                    <p>Free delivery for all orders over ₹499</p>
                 </div>
 
 
                 <div data-aos="zoom-in" data-aos-duration="1500">
                     <img src="./assests/guarantee.png">
                     <h5>FREE AND FAST DELIVERY</h5>
-                    <p>Free delivery for all orders over $140</p>
+                    <p>Free delivery for all orders over ₹499</p>
                 </div>
             </div>
 
@@ -608,7 +608,7 @@
                 <div class="download-app-section" >
                     <h5>Download App</h5>
 
-                    <p>Save $3 with App New User Only</p>
+                    <p>Save ₹3 with App New User Only</p>
 
                     <div class="download-links">
                         <img src="./assests/Qr Code.png">
