--- a/wishList.html
+++ b/wishList.html
@@ -210,7 +210,7 @@
                 <div class="download-app-section">
                     <h5>Download App</h5>
 
-                    <p>Save $3 with App New User Only</p>
+                    <p>Save ₹3 with App New User Only</p>
 
                     <div class="download-links">
                         <img src="./assests/Qr Code.png">
