--- a/cart.html
+++ b/cart.html
@@ -120,9 +120,12 @@
 
 
             <div class="cart-items">
+
+
+
                 <table>
                     <thead>
-                        <tr>
+                        <tr data-aos="fade-down" data-aos-duration="1000">
                             <th class="product">Product</th>
                             <th class="price">Price</th>
                             <th class="quantity">Quantity</th>
@@ -130,7 +133,7 @@
                         </tr>
                     </thead>
 
-                    <tbody class="cart-items-container">
+                    <tbody class="cart-items-container" data-aos="zoom-in" data-aos-duration="1000">
                         
                     </tbody>
 
@@ -140,26 +143,26 @@
 
 
             <div class="cart-btns-group">
-                <button class="btn cart-btns" onclick="window.location.href='home.html'">Return To Shop</button>
-                <button class="btn cart-btns">Update Cart</button>
+                <button class="btn cart-btns" onclick="window.location.href='home.html'" data-aos="fade-right" data-aos-duration="1000">Return To Shop</button>
+                <button class="btn cart-btns" data-aos="fade-left" data-aos-duration="1000">Update Cart</button>
             </div>
 
 
             <div class="coupon-cartTotal">
-                <div class="coupon">
+                <div class="coupon" data-aos="fade-up" data-aos-duration="1000">
                     <input type="text" name="" id="" placeholder="Coupon Code">
                     <button class="btn">Apply Coupon</button>
                 </div>
 
 
-                <div class="cart-total">
+                <div class="cart-total" data-aos="zoom-in-up" data-aos-duration="1000">
                     <h5>Cart Total</h5>
 
-                        <h4>Subtotal:  <span class="cart-subtotal">₹3999</span></h4>
+                        <h4>Subtotal:  <span class="cart-subtotal">₹0.00</span></h4>
                         <h4>Shipping:  <span class="shipping">Free</span></h4> 
                         <h4>delivery:  <span class="delivery">Free</span></h4> 
 
-                        <h4 class="total-row">Total:  <span class="total">₹3999</span></h4>
+                        <h4 class="total-row">Total:  <span class="total">₹0.00</span></h4>
 
                         <div class="checkout-btn">
                             <button class="btn">Procees to checkout</button>
