--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
 <body>
     
     <header data-aos="fade-down" data-aos-duration="1000">
-        <section class="promo-header" >
+        <section class="promo-header">
             <div class="container">
                 <div class="promo-content">
 
@@ -45,7 +45,7 @@
 
         </section>
 
-        <section class="main-header" >
+        <section class="main-header">
             <div class="container">
 
                 <div class="header-content">
@@ -71,9 +71,10 @@
 
 
 
-                            <a href="#wishlist" class="wishlist-link"><img src="./assests/favorite-icon.svg"
+                            <a href="wishList.html" class="wishlist-link"><img src="./assests/favorite-icon.svg"
                                     alt="Wishlist Icon"></a>
-                            <a href="#cart" class="cart-link"><img src="./assests/cart-icon.svg" alt="Cart Icon"></a>
+                            <a href="cart.html" class="cart-link"><img src="./assests/cart-icon.svg"
+                                    alt="Cart Icon"></a>
 
                             <a href="#" class="menu-btn"><i class="fa-solid fa-bars"></i></a>
                         </div>
