--- a/cart.html
+++ b/cart.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<!-- 
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
 </head>
 <body>
     
@@ -149,23 +149,25 @@
 
 
             <div class="coupon-cartTotal">
-                <div class="coupon" data-aos="fade-up" data-aos-duration="1000">
-                    <input type="text" name="" id="" placeholder="Coupon Code">
-                    <button class="btn">Apply Coupon</button>
-                </div>
+                <form class="coupon" data-aos="fade-up" data-aos-duration="1000">
+                    <input class="coupon-code" type="text" name="" id="" placeholder="Coupon Code" onchange="validateCoupon()">
+                    <button class="btn" type="submit">Apply Coupon</button>
+                </form>
 
 
                 <div class="cart-total" data-aos="zoom-in-up" data-aos-duration="1000">
                     <h5>Cart Total</h5>
 
                         <h4>Subtotal:  <span class="cart-subtotal">₹0.00</span></h4>
+                        <h4 class="coupon-group"><span class="coupon-name">Coupon</span>  <span class="discount">-₹0.00</span></h4>
+
                         <h4>Shipping:  <span class="shipping">Free</span></h4> 
                         <h4>delivery:  <span class="delivery">Free</span></h4> 
 
                         <h4 class="total-row">Total:  <span class="total">₹0.00</span></h4>
 
                         <div class="checkout-btn">
-                            <button class="btn">Procees to checkout</button>
+                            <button class="btn coupon-apply" type="button">Procees to checkout</button>
                         </div>
                     
                 </div>
@@ -260,7 +262,7 @@
 
 
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
     <script src="cart.js"></script>
 </body>
 </html>
