--- a/cart.html
+++ b/cart.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+
 <!-- 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
 </head>
@@ -144,13 +146,15 @@
 
             <div class="cart-btns-group">
                 <button class="btn cart-btns" onclick="window.location.href='home.html'" data-aos="fade-right" data-aos-duration="1000">Return To Shop</button>
-                <button class="btn cart-btns" data-aos="fade-left" data-aos-duration="1000">Update Cart</button>
+                <button class="btn cart-btns empty-btn" type="button" data-aos="fade-left" data-aos-duration="1000">Empty Cart</button>
             </div>
 
 
             <div class="coupon-cartTotal">
                 <form class="coupon" data-aos="fade-up" data-aos-duration="1000">
                     <input class="coupon-code" type="text" name="" id="" placeholder="Coupon Code" onchange="validateCoupon()">
+                    <span id="coupon-error">required</span>
+
                     <button class="btn" type="submit">Apply Coupon</button>
                 </form>
 
@@ -178,7 +182,6 @@
 
 
     </section>
-
 
 
 
@@ -263,6 +266,8 @@
 
 
     <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+
     <script src="cart.js"></script>
 </body>
 </html>
