--- a/home.html
+++ b/home.html
@@ -24,6 +24,16 @@
 <body>
 
 
+    <div class="preloader" id="particles-js">
+        <div class="spinner">
+            <div class="inner-spinner">
+
+            </div>
+        </div>
+    </div>
+
+    <div class="main-body">
+        
     <header data-aos="fade-down" data-aos-duration="1000">
         <section class="promo-header" >
             <div class="container">
@@ -635,10 +645,13 @@
         </div>
     </footer>
 
+
+    </div>
+
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
     <script type="module" src="/script.js"></script>
 
 </body>
